k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  to:
    kind: Service
    name: flask-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
